# Agentic-LangGraph

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
docker/: Dockerfile.app  Dockerfile.service  Dockerfile.test
docs/: agent_implementation.md  architecture.md  orchestrator_routing_fix_20250130.md  project_directory.md  service_implementation.md  src_structure.md  system_architecture.md  testing.md
src/: run_agent.py  streamlit_app.py
src/agents/: __init__.py  agents.py  registry.py  research_assistant.py  types.py
src/agents/agents/base/: chatbot.py
src/agents/agents/specialized/: research_assistant.py
src/agents/agents/specialized/bg_task_agent/: task.py
src/agents/bg_task_agent/: bg_task_agent.py
src/agents/common/: types.py
src/agents/core/: __init__.py  agent_registry.py  manager.py  metrics.py  registry_base.py
src/agents/core/orchestrator/: README.md  __init__.py  graph.py  router.py  state.py
src/agents/orchestrator/: __init__.py  graph.py  router.py  state.py
src/agents/tools/: calculator.py  tool_manager.py  tool_registry.py  tool_types.py
src/client/: client.py  logging_config.py  metrics.py  monitoring_dashboard.py
src/core/: llm.py  logging_config.py  monitoring_dashboard.py
src/schema/: models.py  schema.py  task_data.py
src/service/: service.py
tests/: test_orchestrator.py  test_router.py
tests/app/: test_streamlit_app.py
tests/client/: test_client.py
tests/service/: conftest.py  test_service.py  test_service_e2e.py
