[project]
name = "agentixa"
version = "0.1.1"
description = "Orixa Agentic AI built with LangGraph, FastAPI and Streamlit"
readme = "README.md"
authors = [{ name = "Babak Barghi", email = "babak.barghi@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.11, <3.13"

dependencies = [
    # Critical constraints with upper bounds
    "protobuf>=4.25.6,<6",
    "numpy>=1.26.4,<2",
    "pillow>=10.4.0,<12",
    "starlette>=0.44.0,<0.46",
    "uvicorn>=0.33.0,<0.35",
    "jiter>=0.8.2,<0.9.0",

    # LangChain ecosystem
    "langchain-core>=0.3.33,<0.4",
    "langchain-community>=0.3.16,<0.4",
    "langchain-openai>=0.3.3,<0.4",
    "langchain-anthropic>=0.3.5,<0.4",
    "langchain-google-genai>=2.0.9,<3",
    "langchain-groq>=0.2.4,<0.3",
    "langchain-aws>=0.2.11,<0.3",
    "langgraph>=0.2.69,<0.3",
    "langgraph-checkpoint-sqlite>=2.0.3,<3",

    # Core dependencies
    "fastapi>=0.115.5,<0.116",
    "pydantic>=2.10.1,<2.11",
    "pydantic-settings>=2.6.1,<3",
    "python-json-logger>=3.2.1",

    # Others with conservative ranges
    "httpx>=0.27.2,<0.29",
    "duckduckgo-search>=7.1.1,<8",
    "langsmith>=0.1.147,<0.4",
    "streamlit>=1.40.2,<1.42",
    "pyarrow >=18.1.0", # python 3.13 support
    "pyowm ~=3.3.0",
    "python-dotenv ~=1.0.1",
    "setuptools ~=75.6.0",
    "tiktoken >=0.8.0", # python 3.13 support
    "numexpr ~=2.10.1"
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-asyncio",
    "ruff",
]

# Group for the minimal dependencies to run just the client and Streamlit app.
# These are also installed in the default dependencies.
# To install run: `uv sync --frozen --only-group client`
client = [
    "httpx~=0.27.2",
    "pydantic ~=2.10.1",
    "python-dotenv ~=1.0.1",
    "streamlit~=1.40.1",
    "plotly~=5.19.0",  # Added for monitoring dashboard
]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # Enable isort (I) and pyupgrade (UP) rules
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
OPENAI_API_KEY = "sk-fake-openai-key"